--- a/labs/reservationsystem/database/pom.xml
+++ b/labs/reservationsystem/database/pom.xml
@@ -9,14 +9,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>station</artifactId>
-    <name>station</name>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.elitelabs.labs.train</groupId>
-            <artifactId>database</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>database</artifactId>
+    <name>user</name>
 </project>
